docs: readmeの体裁修正
