# open-api/api/openapi.yaml
@@ -6,49 +6,76 @@ servers:
 - url: /
 paths:
   /api/v1/articles:
-    post:
+    get:
       tags:
       - articles
-      summary: 記事情報を取得
-      operationId: apiV1ArticlesPOST
-      requestBody:
-        description: レビューの中身
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/body'
-        required: true
+      summary: 記事情報取得
+      operationId: apiV1ArticlesGET
+      parameters:
+      - name: qiitaUserName
+        in: query
+        description: QiitaユーザID
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+        example: kamimi01
+      - name: noteUserName
+        in: query
+        description: Noteユーザ名
+        required: false
+        style: form
+        explode: true
+        schema:
+          type: string
+        example: kamimi01
       responses:
         "200":
           description: Success
+          headers:
+            X-Rate-Limit:
+              description: リクエスト上限回数
+              style: simple
+              explode: false
+              schema:
+                type: integer
+                example: 10
+            X-Rate-Remaining:
+              description: リクエスト可能回数
+              style: simple
+              explode: false
+              schema:
+                type: integer
+                example: 4
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/inline_response_200'
         "400":
-          description: Request Body is required
+          description: At least one prameter is required
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrResponses'
+                $ref: '#/components/schemas/inline_response_400'
         "415":
           description: Unsupported Media Type
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrResponses'
+                $ref: '#/components/schemas/inline_response_415'
         "429":
           description: Too Many requests
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrResponses'
+                $ref: '#/components/schemas/inline_response_429'
         "500":
           description: Internal Server Error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ErrResponses'
+                $ref: '#/components/schemas/inline_response_500'
       x-swagger-router-controller: Articles
 components:
   schemas:
@@ -59,15 +86,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ErrResponses_errors'
-    body:
-      type: object
-      properties:
-        qiitaUserName:
-          type: string
-          example: kamimi01
-        noteUserName:
-          type: string
-          example: kamikami
     inline_response_200:
       type: object
       properties:
@@ -77,61 +95,57 @@ components:
             $ref: '#/components/schemas/inline_response_200_articleContents'
       example:
         articleContents:
-        - service: qiita
-          articles:
-          - title: clusterのリンクをまとめてみた
-            userName: kamimi01
-            numOfGood: 5
-            url: https://qiita.com/kamimi01
-          - title: clusterのリンクをまとめてみた
-            userName: kamimi01
-            numOfGood: 5
-            url: https://qiita.com/kamimi01
-        - service: qiita
-          articles:
-          - title: clusterのリンクをまとめてみた
-            userName: kamimi01
-            numOfGood: 5
-            url: https://qiita.com/kamimi01
-          - title: clusterのリンクをまとめてみた
-            userName: kamimi01
-            numOfGood: 5
-            url: https://qiita.com/kamimi01
+        - createdDate: 2020-12-24T12:06:44+09:00
+          service: qiita
+          title: 色んな人向けにバーチャルSNS - cluster - に関するリンクを広く浅くまとめてみた
+          userName: kamimi01
+          numOfGood: 1
+          url: https://qiita.com/kamimi01/items/353ed9502ed62cbe9864
+        - createdDate: 2020-12-24T12:06:44+09:00
+          service: qiita
+          title: 色んな人向けにバーチャルSNS - cluster - に関するリンクを広く浅くまとめてみた
+          userName: kamimi01
+          numOfGood: 1
+          url: https://qiita.com/kamimi01/items/353ed9502ed62cbe9864
+    inline_response_400:
+      type: object
+      properties:
+        errors:
+          type: array
+          items:
+            $ref: '#/components/schemas/inline_response_400_errors'
+    inline_response_415:
+      type: object
+      properties:
+        errors:
+          type: array
+          items:
+            $ref: '#/components/schemas/ErrResponses_errors'
+    inline_response_429:
+      type: object
+      properties:
+        errors:
+          type: array
+          items:
+            $ref: '#/components/schemas/inline_response_429_errors'
+    inline_response_500:
+      type: object
+      properties:
+        errors:
+          type: array
+          items:
+            $ref: '#/components/schemas/inline_response_500_errors'
     ErrResponses_errors:
       type: object
       properties:
-        errcode:
+        type:
           type: string
-          description: エラーコード
-          example: ERR-01-a
+          description: エラーのタイプ
+          example: unsupported_content_type
         message:
           type: string
           description: エラーメッセージ
-          example: パラメータが不足しています。
-    inline_response_200_articles:
-      type: object
-      properties:
-        title:
-          type: string
-          description: 記事タイトル
-          example: clusterのリンクをまとめてみた
-        userName:
-          type: string
-          description: ユーザ名
-          example: kamimi01
-        numOfGood:
-          type: integer
-          description: いいねやスキの数
-          example: 5
-        url:
-          type: string
-          description: 記事のURL
-          example: https://qiita.com/kamimi01
-      example:
-        title: clusterのリンクをまとめてみた
-        userName: kamimi01
-        numOfGood: 5
-        url: https://qiita.com/kamimi01
+          example: Unsupported Content-Type
     inline_response_200_articleContents:
       type: object
       properties:
@@ -139,18 +153,63 @@ components:
           type: string
           description: 記事のサービス名
           example: qiita
-        articles:
-          type: array
-          items:
-            $ref: '#/components/schemas/inline_response_200_articles'
+        title:
+          type: string
+          description: 記事タイトル
+          example: 色んな人向けにバーチャルSNS - cluster - に関するリンクを広く浅くまとめてみた
+        userName:
+          type: string
+          description: ユーザ名
+          example: kamimi01
+        numOfGood:
+          type: integer
+          description: いいねやスキの数
+          example: 1
+        url:
+          type: string
+          description: 記事のURL
+          example: https://qiita.com/kamimi01/items/353ed9502ed62cbe9864
+        createdDate:
+          type: string
+          description: 記事の作成日時
+          example: 2020-12-24T12:06:44+09:00
       example:
+        createdDate: 2020-12-24T12:06:44+09:00
         service: qiita
-        articles:
-        - title: clusterのリンクをまとめてみた
-          userName: kamimi01
-          numOfGood: 5
-          url: https://qiita.com/kamimi01
-        - title: clusterのリンクをまとめてみた
-          userName: kamimi01
-          numOfGood: 5
-          url: https://qiita.com/kamimi01
+        title: 色んな人向けにバーチャルSNS - cluster - に関するリンクを広く浅くまとめてみた
+        userName: kamimi01
+        numOfGood: 1
+        url: https://qiita.com/kamimi01/items/353ed9502ed62cbe9864
+    inline_response_400_errors:
+      type: object
+      properties:
+        type:
+          type: string
+          description: エラーのタイプ
+          example: no_parameters
+        message:
+          type: string
+          description: エラーメッセージ
+          example: At least one prameter is required
+    inline_response_429_errors:
+      type: object
+      properties:
+        type:
+          type: string
+          description: エラーのタイプ
+          example: too_many_requests
+        message:
+          type: string
+          description: エラーメッセージ
+          example: Too Many requests
+    inline_response_500_errors:
+      type: object
+      properties:
+        type:
+          type: string
+          description: エラーのタイプ
+          example: internal_server_error
+        message:
+          type: string
+          description: エラーメッセージ
+          example: Internal Server Error
