# open-api/controllers/Articles.js
@@ -3,8 +3,8 @@
 var utils = require('../utils/writer.js');
 var Articles = require('../service/ArticlesService');
 
-module.exports.apiV1ArticlesPOST = function apiV1ArticlesPOST (req, res, next, body) {
-  Articles.apiV1ArticlesPOST(body)
+module.exports.apiV1ArticlesGET = function apiV1ArticlesGET (req, res, next, qiitaUserName, noteUserName) {
+  Articles.apiV1ArticlesGET(qiitaUserName, noteUserName)
     .then(function (response) {
       utils.writeJson(res, response);
     })
